tests/valid/definite/ConstrainedInt_Valid_4.whiley
// this is a comment!
nat as int where $ < 10

nat f():
    return 1

void System::main([string] args):
    print str(f())
